--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "build": "npm install"
   },
   "engines": {
@@ -17,13 +17,16 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "^3.3.1",
+    "dotenv": "^16.0.1",
     "expo-server-sdk": "^3.5.0",
     "express": "^4.18.1",
     "helmet": "^3.22.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.4",
     "multer": "^1.4.2",
-    "sharp": "^0.30.6"
+    "sharp": "^0.30.6",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
