--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm install"
   },
   "engines": {
-    "node": "12.13.x"
+    "node": "16.16.0"
   },
   "keywords": [],
   "author": "John Muller",
@@ -17,18 +17,18 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "^3.3.1",
-    "dotenv": "^16.0.1",
     "expo-server-sdk": "^3.5.0",
     "express": "^4.18.1",
     "helmet": "^3.22.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.4",
+    "mongoose": "^6.6.2",
     "multer": "^1.4.2",
     "sharp": "^0.30.6",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "dotenv": "^16.0.2",
+    "nodemon": "^2.0.20"
   }
 }
