--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "John Muller",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "^3.3.1",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "multer": "^1.4.2",
+    "nodemailer": "^6.8.0",
     "sharp": "^0.30.6",
     "socket.io": "^4.5.1"
   },
